--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ p {
 
 /* --- Hero Section --- */
 .hero {
-    background: url(pelé.webp) no-repeat center center/cover; /* Adicione uma imagem de fundo impactante */
+    background: url(FotoPelé.webp) no-repeat center center/cover; /* Adicione uma imagem de fundo impactante */
     color: #fff;
     text-align: center;
     padding: 150px 0;
@@ -147,7 +147,7 @@ p {
 }
 
 .btn-primary {
-    background-color: #f6b401;
+    background-color: #c17b04e8;
     color: #fff;
     padding: 15px 30px;
     border-radius: 5px;
